--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "An Electron app for developers to visualize their Kubernetes clusters in real-time",
   "main": "main.js",
   "scripts": {
-    "start": "electron ./out/electron/main.js",
-    "build": "tsc && cp ./src/website/index.html ./out/website/index.html",
+    "start": "electron ./dist/main.bundle.js",
+    "dev": "rimraf dist && cross-env NODE_ENV=development webpack --watch --progress --colors & cross-env NODE_ENV=development electron .",
+    "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --colors",
+    "build": "tsc && cp ./src/client/index.html",
     "build:watch": "npm run build -- --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:mac": "electron-builder build --mac --x64"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oslabs-beta/kubernati.git"
   },
   "contributors": [
-    "Jacob", 
-    "Jay", 
-    "Jimmy", 
+    "Jacob",
+    "Jay",
+    "Jimmy",
     "Juan"
   ],
   "license": "MIT",
@@ -27,12 +29,29 @@
   "devDependencies": {
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "copy-pkg-json-webpack-plugin": "0.0.38",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
     "electron": "^6.0.3",
+    "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-installer-dmg": "^3.0.0",
+    "electron-prebuilt": "^1.4.13",
+    "electron-reload": "^1.5.0",
+    "lodash": "^4.17.15",
+    "rimraf": "^3.0.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.0.4",
+    "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.3",
+    "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
 }
