--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An Electron app for developers to visualize their Kubernetes clusters in real-time",
   "main": "main.js",
   "scripts": {
+    "prestart": "rimraf dist && cross-env NODE_ENV=development webpack --watch --progress --colors & cross-env NODE_ENV=development",
     "start": "electron ./dist/main.bundle.js",
-    "dev": "rimraf dist && cross-env NODE_ENV=development webpack --watch --progress --colors & cross-env NODE_ENV=development electron .",
+    "dev": "electron ./dist/main.bundle.js",
     "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --colors",
     "build": "tsc && cp ./src/client/index.html",
     "build:watch": "npm run build -- --watch",
@@ -27,6 +28,7 @@
   },
   "homepage": "https://github.com/oslabs-beta/kubernati#readme",
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "copy-pkg-json-webpack-plugin": "0.0.38",
@@ -34,11 +36,15 @@
     "css-loader": "^3.2.0",
     "electron": "^6.0.3",
     "electron-builder": "^21.2.0",
+    "electron-connect": "^0.6.3",
+    "electron-connect-webpack-plugin": "^0.1.1",
     "electron-devtools-installer": "^2.2.4",
     "electron-installer-dmg": "^3.0.0",
     "electron-prebuilt": "^1.4.13",
     "electron-reload": "^1.5.0",
+    "electron-reload-webpack-plugin": "^2.0.4",
     "lodash": "^4.17.15",
+    "nodemon": "^1.19.1",
     "rimraf": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
@@ -50,6 +56,7 @@
   },
   "dependencies": {
     "@material-ui/icons": "^4.2.1",
+    "d3": "^5.11.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
