--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "homepage": "https://github.com/oslabs-beta/kubernati#readme",
   "devDependencies": {
-    "@types/d3": "^5.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "copy-pkg-json-webpack-plugin": "0.0.38",
@@ -55,9 +54,13 @@
   },
   "dependencies": {
     "@material-ui/icons": "^4.2.1",
+    "@types/d3": "^5.7.2",
+    "d3": "^5.11.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "scale": "0.0.7"
+    "scale": "0.0.7",
+    "three": "^0.107.0",
+    "three-orbitcontrols": "^2.102.2"
   }
 }
