Cluster info from Google cloud API can be sent to front-end electron app

--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   },
   "homepage": "https://github.com/oslabs-beta/kubernati#readme",
   "devDependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "babel-preset-es2015": "^6.24.1",
     "copy-pkg-json-webpack-plugin": "0.0.38",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
-    "electron": "^6.0.3",
+    "electron": "^6.0.4",
     "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-installer-dmg": "^3.0.0",
@@ -49,7 +52,18 @@
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@google-cloud/container": "^1.1.3",
+    "@kubernetes/client-node": "^0.10.2",
     "@material-ui/icons": "^4.2.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "google-proto-files": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
