--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,16 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true, 
+    "noImplicitAny": false,
+    "noImplicitThis": true,
     "module": "commonjs",
     "target": "es6",
     "jsx": "react",
     "lib": ["es6", "dom", "es2017"],
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "moduleResolution": "node"
   },
   "include": [
     "./src/**/*"
