--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
+    "@google-cloud/container": "^1.1.3",
+    "@kubernetes/client-node": "^0.10.2",
     "@material-ui/icons": "^4.2.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "ts-node": "^8.3.0"
   }
 }
