--- a/.babelrc
+++ b/.babelrc
@@ -5,9 +5,6 @@
     "@babel/typescript"
   ],
   "plugins": [
-    ["@babel/plugin-transform-async-to-generator",{
-    "module": "bluebird",
-    "method": "coroutine"
-    }]
+    ["@babel/plugin-transform-async-to-generator"]
   ]
 }
