--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-pkg-json-webpack-plugin": "0.0.38",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
@@ -57,12 +62,10 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@google-cloud/container": "^1.1.3",
+    "@google-cloud/containeranalysis": "^1.3.3",
     "@kubernetes/client-node": "^0.10.2",
     "@material-ui/icons": "^4.2.1",
-    "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-0": "^6.24.1",
     "google-proto-files": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
