--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/underscore": "^1.9.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "@types/underscore": "^1.9.2",
     "copy-pkg-json-webpack-plugin": "0.0.38",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
@@ -48,6 +48,7 @@
     "electron-devtools-installer": "^2.2.4",
     "electron-installer-dmg": "^3.0.0",
     "electron-prebuilt": "^1.4.13",
+    "electron-react-devtools": "^0.5.3",
     "electron-reload": "^1.5.0",
     "electron-reload-webpack-plugin": "^2.0.4",
     "lodash": "^4.17.15",
