--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "scale": "0.0.7",
+    "tachyons": "^4.11.1",
     "three": "^0.107.0",
     "three-orbitcontrols": "^2.102.2",
     "ts-node": "^8.3.0",
