--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --colors",
     "build": "tsc && cp ./src/client/index.html",
     "build:watch": "npm run build -- --watch",
-    "build:mac": "electron-builder build --mac --x64"
+    "build:mac": "electron-builder build --mac --x64",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,10 +30,12 @@
   "devDependencies": {
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/underscore": "^1.9.2",
     "babel-core": "^6.26.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -51,13 +54,17 @@
     "electron-react-devtools": "^0.5.3",
     "electron-reload": "^1.5.0",
     "electron-reload-webpack-plugin": "^2.0.4",
+    "file-loader": "^4.2.0",
+    "jest": "^24.9.0",
     "lodash": "^4.17.15",
     "rimraf": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.3",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-livereload-plugin": "^2.2.0"
@@ -67,26 +74,28 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@types/react-router-dom": "^4.3.5",
-    "babel-loader": "^8.0.6",
-    "electron-connect": "^0.6.3",
-    "react-router-dom": "^5.0.1",
     "@google-cloud/container": "^1.1.3",
     "@google-cloud/containeranalysis": "^1.3.3",
     "@kubernetes/client-node": "^0.10.2",
     "@material-ui/icons": "^4.2.1",
+    "@types/d3": "^5.7.2",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/react-router-dom": "^4.3.5",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "bootstrap": "^4.3.1",
+    "d3": "^5.11.0",
+    "electron-connect": "^0.6.3",
     "google-proto-files": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "ts-node": "^8.3.0",
-    "@types/d3": "^5.7.2",
-    "d3": "^5.11.0",
+    "react-router-dom": "^5.0.1",
     "scale": "0.0.7",
     "three": "^0.107.0",
     "three-orbitcontrols": "^2.102.2",
+    "ts-node": "^8.3.0",
     "underscore": "^1.9.1"
   }
 }
