--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
   "devDependencies": {
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/underscore": "^1.9.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "@types/underscore": "^1.9.2",
     "copy-pkg-json-webpack-plugin": "0.0.38",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
@@ -66,26 +67,28 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@types/react-router-dom": "^4.3.5",
-    "babel-loader": "^8.0.6",
-    "electron-connect": "^0.6.3",
-    "react-router-dom": "^5.0.1",
     "@google-cloud/container": "^1.1.3",
     "@google-cloud/containeranalysis": "^1.3.3",
     "@kubernetes/client-node": "^0.10.2",
     "@material-ui/icons": "^4.2.1",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/d3": "^5.7.2",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/react-router-dom": "^4.3.5",
+    "aws-sdk": "^2.524.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "d3": "^5.11.0",
+    "electron-connect": "^0.6.3",
     "google-proto-files": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "ts-node": "^8.3.0",
-    "@types/d3": "^5.7.2",
-    "d3": "^5.11.0",
+    "react-router-dom": "^5.0.1",
     "scale": "0.0.7",
     "three": "^0.107.0",
     "three-orbitcontrols": "^2.102.2",
+    "ts-node": "^8.3.0",
     "underscore": "^1.9.1"
   }
 }
