Rest of testing is written out, eslint prettier and tslint config files added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "tsc && cp ./src/client/index.html",
     "build:watch": "npm run build -- --watch",
     "build:mac": "electron-builder build --mac --x64",
+    "lint": "eslint --ignore-path .gitignore",
+    "lint:fix": "npm run lint --fix",
     "test": "jest"
   },
   "repository": {
@@ -30,11 +32,13 @@
   "devDependencies": {
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/underscore": "^1.9.2",
+    "@typescript-eslint/parser": "^2.2.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -55,6 +59,16 @@
     "electron-react-devtools": "^0.5.3",
     "electron-reload": "^1.5.0",
     "electron-reload-webpack-plugin": "^2.0.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.2.0",
     "jest": "^24.9.0",
     "lodash": "^4.17.15",
@@ -80,10 +94,10 @@
     "@kubernetes/client-node": "^0.10.2",
     "@material-ui/icons": "^4.2.1",
     "@types/aws-sdk": "^2.7.0",
-    "aws-sdk": "^2.524.0",
     "@types/d3": "^5.7.2",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/react-router-dom": "^4.3.5",
+    "aws-sdk": "^2.524.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "bootstrap": "^4.3.1",
@@ -91,6 +105,7 @@
     "electron-connect": "^0.6.3",
     "google-proto-files": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
