--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "three": "^0.107.0",
     "three-orbitcontrols": "^2.102.2",
     "ts-node": "^8.3.0",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "util": "^0.12.1"
   }
 }
